# app-multi-agent-conjectural-assist

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app-multi-agent-conjectural-assist.code-workspace  docker-compose.dev.yml  env.local.example  next.config.ts  package.json  pnpm-lock.yaml  workspace.code-workspace
backend/: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  logging_config.py
backend/app/agent/: __init__.py  graph.new.py  graph.old.py  graph.py  llm_config.py  state.py  tools.py
backend/app/agent/models/: data_context.py  knowledge_graph.py
backend/app/agent/nodes/: __init__.py  analysis.py  coordinator.py  elicitation.py  final.py  generic.py  left_node.py  orchestrator.new.py  orchestrator.py  right_node.py  specification.py  start.py  validation.py
backend/app/agent/prompts/: __init__.py  analysis_business_need_uncertainty_detection_prompt.py  analysis_conjectural_hypothesis_prompt.py  analysis_contextual_questions_prompt.py  analysis_impact_uncertainty_detection_prompt.py  b01_elicitation_refine_business_need_prompt.py  b02_elicitation_generate_business_need_prompt.py  b04_elicitation_answer_whatif_questions_prompt.py  (+16 more)
backend/app/middleware/: request_logging.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  agent.py  auth_utils.py  conjectural_requirements.py  dashboard.py  profiles.py  projects.py  requirements.py  settings.py
backend/app/services/: conjectural_persistence.py  document_parser.py  embedding_service.py  requirement_extractor.py  supabase_client.py
(+117 files in other folders)
