[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Conjectural Assist with LangGraph agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "google-genai>=1.0.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    # LangGraph Agent dependencies
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "copilotkit==0.1.74",
]
